--- a/css/styles.css
+++ b/css/styles.css
@@ -603,6 +603,11 @@ input[type=submit]:hover {
   border: 2px solid rgb(244, 235, 67);
   border-radius: 12px;
   padding: 20px;
+  margin: 40px auto;
+  margin-bottom: 60px;
+  margin-top: 60px;
+  max-width: 700px;
+  padding: 20px 30px;
 }
 
 .cook-frame p {
